<resources>

    <string name="app_name">MeetNewPeople</string>
    <string name="login"> Log in</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Name">Name</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="phone">Phone</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="aboutMe">About me</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="ResetPasswort">Reset password</string>
    <string name="contentdescription">contentDescription</string>
    <string name="Matches">Matches</string>
    <string name="send">Send</string>
    <string name="both">Both</string>
    <string name="preferedGender">Preferred Gender</string>
    <string name="message">Message....</string>
    <string name="picture">Picture</string>
    <string name="notFoundEmail">Email not Found</string>
    <string name="wrongPassword">Incorrect password</string>
    <string name="networkError">Network error</string>
    <string name="myGender">My Gender</string>
    <string name="searchedGender">I want to find</string>
    <string name="myPicture">My picture</string>
    <string name="uHaveToSelectYourGender">You have to select your own Gender</string>
    <string name="uHaveToSelectSearchedGender">You have to select gender, you\' re looking for</string>
    <string name="uHaveTOAddPhoto">Show yourself to other (Add picture)</string>
    <string name="SearchingRange">Searching Range</string>
    <string name="emailExists">Your email already exists</string>
    <string name="notVerifiedEmail">You email is not verified</string>
    <string name="verifyYourMail">Please verify your email</string>
    <string name="todo">TODO</string>
    <string name="away">km away</string>
    <string name="city">City</string>
    <string name="Job">Job</string>
    <string name="reported_By">Reported by</string>
    <string name="date_of_report">Date of report</string>
    <string name="offensive_messages">Offensive Messages</string>
    <string name="inappropriate_photo">Inappropriate Photo</string>
    <string name="cancel">Cancel</string>
    <string name="notFoundGps">Localization not found</string>
    <string name="reason_of_report">Select reason of the report:</string>
    <string name="no_matches_found">No matches found</string>
    <string name="channel_name">Meet new people channel</string>
    <string name="channel_description">New Message</string>
    <string name="yourNewMatch">" is your new match"</string>
    <string name="UHaveNewMessage">"You have new message "</string>
    <string name="for_picture">For picture</string>
    <string name="for_profile_data">For description</string>
    <string name="for_chat">"For chat "</string>
    <string name="are_you_sure_that_u_want_to_remove_this_match">Are you sure that u want to remove this match?</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_that_u_want_to_logout">Are u sure that u want to logout</string>
    <string name="about">About</string>
    <string name="job">Job</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="unlimited">Unlimited</string>
    <string name="limited">Limited</string>
    <string name="vulgar_descrption">Vulgar description</string>
    <string name="dont_have_account">You don\'t have account? Create it!</string>
    <string name="repeat_email">Repeat email</string>
    <string name="my_password">My password</string>
    <string name="create">Create</string>
    <string name="emails_not_match">Emails not Match</string>
    <string name="your_account_is_banned">Sorry but your account is banned</string>
    <string name="emailvalidateerr">This email is not validate</string>
    <string name="passwordtiishort"><![CDATA[This password is too weak <6 chars]]></string>
    <string name="nameLenght">Your name is too short (less than 3 charss)</string>

</resources>