<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55000000"
    android:onClick="doNothing"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:background="@drawable/layout_report"
        android:padding="30dp"
        android:layout_width="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reason_of_report"/>
                <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:text="@string/offensive_messages"
                        android:onClick="repMessages"/>
                <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:text="@string/inappropriate_photo"
                        android:onClick="repPhoto"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vulgar_descrption"
                    style="?android:attr/buttonBarButtonStyle"
                    android:onClick="repDescription"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="#ff0000"
                    android:onClick="hideReports"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>