<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eb1e63"
    tools:context=".ResetPasswordActivity">
    <Button
        android:id="@+id/back"
        android:background="@drawable/button_round"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:text="@string/back"
        android:onClick="back"/>
    <EditText
        android:id="@+id/emailForReset"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:textColor="#ffff"
        android:textColorHint="#fabfd3"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />
    <Button
        android:id="@+id/resetPasswordBtn"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_below="@+id/emailForReset"
        android:background="@drawable/button_round"
        android:layout_centerHorizontal="true"
        android:onClick="resetPassword"
        android:text="@string/ResetPasswort" />
</RelativeLayout>