<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#eb1e63"
    tools:context=".Settings"
    android:padding="20sp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="142dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_alignStart="@id/name"
        android:contentDescription="@string/contentdescription" />
    <EditText
        android:id="@+id/name"
        android:layout_below="@id/profileImage"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:textColor="#fabfd3"
        android:textColorHint="#fabfd3"
        android:backgroundTint="#fabfd3"
        android:layout_centerHorizontal="true"
        android:hint="@string/name"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/phone"
        android:layout_below="@id/name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:textColor="#fabfd3"
        android:textColorHint="#fabfd3"
        android:backgroundTint="#fabfd3"
        android:layout_centerHorizontal="true"
        android:hint="@string/phone"
        android:layout_marginBottom="20dp"
        android:inputType="phone"
        android:autofillHints="" />
    <EditText
        android:id="@+id/aboutMe"
        android:layout_below="@id/phone"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:textColor="#fabfd3"
        android:textColorHint="#fabfd3"
        android:backgroundTint="#fabfd3"
        android:layout_centerHorizontal="true"
        android:hint="@string/aboutMe"
        android:layout_marginBottom="20sp"
        android:inputType="text"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/chooseSexDescription"
        android:layout_below="@id/aboutMe"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:textColor="#fabfd3"
        android:textColorHint="#fabfd3"
        android:backgroundTint="#fabfd3"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:hint="@string/preferedGender" />
    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_below="@+id/chooseSexDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:backgroundTint="#fabfd3"
        android:layout_centerHorizontal="true"
        android:textColor="#fabfd3"
        android:layout_marginBottom="20dp"
        >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/facet30"
            android:button="@null"
            android:textAlignment="center"
            android:text="@string/male"
            android:background="@drawable/radio_button_round_left"
            android:textColor="#fabfd3"

            />
        <RadioButton
            android:id="@+id/both"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/oboje"
            android:button="@null"
            android:textAlignment="center"
            android:text="@string/both"
            android:background="@drawable/radio_button_mid"
            android:textColor="#fabfd3"

            />
        <RadioButton
            android:id="@+id/female"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/kobieta30"
            android:button="@null"
            android:textAlignment="center"
            android:text="@string/female"
            android:background="@drawable/radio_button_round_right"
            android:textColor="#fabfd3"

            />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/seekBar"
        android:layout_centerHorizontal="true">
            <Button
                android:id="@+id/back"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_marginEnd="20dp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/button_round"
                android:text="@string/back"/>
            <Button
                android:id="@+id/confirm"
                android:layout_width="150dp"
                android:layout_height="45dp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/button_round"
                android:text="@string/confirm"/>
    </LinearLayout>
<androidx.appcompat.widget.SwitchCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/radioGroupSex"
    android:layout_centerHorizontal="true"
    android:id="@+id/switcher" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Unimited"
        android:textStyle="bold"
        android:textColor="#fabfd3"
        android:scrollbarSize="14sp"
        android:layout_alignTop="@+id/switcher"
        android:paddingRight="10dp"
        android:layout_alignBottom="@+id/switcher"
        android:layout_toLeftOf="@+id/switcher"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Limited"
        android:textStyle="bold"
        android:textColor="#fabfd3"
        android:scrollbarSize="14sp"
        android:paddingLeft="10dp"
        android:layout_alignTop="@+id/switcher"
        android:layout_alignBottom="@+id/switcher"
        android:layout_toRightOf="@+id/switcher"
        />
<com.ramotion.fluidslider.FluidSlider
    android:id="@+id/seekBar"
    android:layout_below="@+id/switcher"
    android:layout_width="300dp"
    android:layout_centerHorizontal="true"
    android:layout_height="wrap_content"
    android:minHeight="40dp"
    app:end_text="200 km"
    android:layout_marginBottom="20dp"
    android:visibility="gone"
    app:start_text="2 km"/>
</RelativeLayout>
</androidx.core.widget.NestedScrollView>